src/ImguiSdlSharp.Native/cimgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef struct ImVector_ImGuiStorage_ImGuiStoragePair_t ImVector_ImGuiStorage_ImGuiStoragePair;
typedef struct ImVector_ImDrawCmd_t ImVector_ImDrawCmd;
typedef struct ImVector_ImDrawIdx_t ImVector_ImDrawIdx;
typedef struct ImVector_ImDrawVert_t ImVector_ImDrawVert;
typedef struct ImVector_ImVec4_t ImVector_ImVec4;
typedef struct ImVector_ImTextureID_t ImVector_ImTextureID;
typedef struct ImVector_ImVec2_t ImVector_ImVec2;
typedef struct ImDrawCmdHeader_t ImDrawCmdHeader;
typedef struct ImDrawList_t ImDrawList;                                  
typedef struct ImDrawListSharedData_t ImDrawListSharedData;              
typedef struct ImDrawListSplitter_t ImDrawListSplitter;                  
typedef struct ImDrawVert_t ImDrawVert;                                  
typedef struct ImGuiStorage_t ImGuiStorage;                              
typedef struct ImGuiViewport_t ImGuiViewport;                            
typedef int ImGuiKey;            
typedef int ImGuiCol;            
typedef int ImGuiMouseButton;    
typedef int ImGuiMouseCursor;    
typedef int ImDrawListFlags;        
typedef int ImGuiViewportFlags;     
typedef int ImGuiWindowFlags;       
typedef unsigned short ImDrawIdx;  
typedef unsigned int ImGuiID;      
typedef unsigned int ImU32;        
typedef void* (*ImGuiMemAllocFunc)(size_t sz, void* user_data);           
typedef void (*ImGuiMemFreeFunc)(void* ptr, void* user_data);             
IM_MSVC_RUNTIME_CHECKS_OFF
typedef struct ImVec2_t
{
    float x, y;
} ImVec2;
typedef struct ImVec4_t
{
    float x, y, z, w;
} ImVec4;
CIMGUI_API bool ImGui_ComboCallback(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count);  
CIMGUI_API bool ImGui_ComboCallbackEx(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool ImGui_ListBoxCallback(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count); 
CIMGUI_API bool ImGui_ListBoxCallbackEx(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int height_in_items );
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);      
CIMGUI_API void ImGui_PlotLinesCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);  
CIMGUI_API void ImGui_PlotHistogramCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API bool    ImGui_IsItemClickedEx(ImGuiMouseButton mouse_button );  
CIMGUI_API bool    ImGui_IsItemVisible(void);                                       
CIMGUI_API bool    ImGui_IsItemEdited(void);                                        
CIMGUI_API bool    ImGui_IsItemActivated(void);                                     
CIMGUI_API bool    ImGui_IsItemDeactivated(void);                                   
CIMGUI_API bool    ImGui_IsItemDeactivatedAfterEdit(void);                          
CIMGUI_API bool    ImGui_IsItemToggledOpen(void);                                   
CIMGUI_API bool    ImGui_IsAnyItemHovered(void);                                    
CIMGUI_API bool    ImGui_IsAnyItemActive(void);                                     
CIMGUI_API bool    ImGui_IsAnyItemFocused(void);                                    
CIMGUI_API ImGuiID ImGui_GetItemID(void);                                           
CIMGUI_API ImVec2  ImGui_GetItemRectMin(void);                                      
CIMGUI_API ImVec2  ImGui_GetItemRectMax(void);                                      
CIMGUI_API ImVec2  ImGui_GetItemRectSize(void);                                     
CIMGUI_API void    ImGui_SetItemAllowOverlap(void);                                 
CIMGUI_API ImGuiViewport* ImGui_GetMainViewport(void);  
CIMGUI_API ImDrawList* ImGui_GetBackgroundDrawList(void);  
CIMGUI_API ImDrawList* ImGui_GetForegroundDrawList(void);  
CIMGUI_API bool                  ImGui_IsRectVisibleBySize(ImVec2 size);                 
CIMGUI_API bool                  ImGui_IsRectVisible(ImVec2 rect_min, ImVec2 rect_max);  
CIMGUI_API double                ImGui_GetTime(void);                                    
CIMGUI_API int                   ImGui_GetFrameCount(void);                              
CIMGUI_API ImDrawListSharedData* ImGui_GetDrawListSharedData(void);                      
CIMGUI_API const char*           ImGui_GetStyleColorName(ImGuiCol idx);                  
CIMGUI_API void                  ImGui_SetStateStorage(ImGuiStorage* storage);           
CIMGUI_API ImGuiStorage*         ImGui_GetStateStorage(void);
CIMGUI_API bool                  ImGui_BeginChildFrame(ImGuiID id, ImVec2 size, ImGuiWindowFlags flags ); 
CIMGUI_API void                  ImGui_EndChildFrame(void);                              
CIMGUI_API ImVec2 ImGui_CalcTextSize(const char* text);  
CIMGUI_API ImVec2 ImGui_CalcTextSizeEx(const char* text, const char* text_end , bool hide_text_after_double_hash , float wrap_width );
CIMGUI_API ImVec4 ImGui_ColorConvertU32ToFloat4(ImU32 in);
CIMGUI_API ImU32  ImGui_ColorConvertFloat4ToU32(ImVec4 in);
CIMGUI_API void   ImGui_ColorConvertRGBtoHSV(float r, float g, float b, float* out_h, float* out_s, float* out_v);
CIMGUI_API void   ImGui_ColorConvertHSVtoRGB(float h, float s, float v, float* out_r, float* out_g, float* out_b);
CIMGUI_API bool        ImGui_IsKeyDown(ImGuiKey key);                                            
CIMGUI_API bool        ImGui_IsKeyPressed(ImGuiKey key);                                         
CIMGUI_API bool        ImGui_IsKeyPressedEx(ImGuiKey key, bool repeat );             
CIMGUI_API bool        ImGui_IsKeyReleased(ImGuiKey key);                                        
CIMGUI_API int         ImGui_GetKeyPressedAmount(ImGuiKey key, float repeat_delay, float rate);  
CIMGUI_API const char* ImGui_GetKeyName(ImGuiKey key);                                           
CIMGUI_API void        ImGui_SetNextFrameWantCaptureKeyboard(bool want_capture_keyboard);        
CIMGUI_API bool             ImGui_IsMouseDown(ImGuiMouseButton button);                                          
CIMGUI_API bool             ImGui_IsMouseClicked(ImGuiMouseButton button);                                       
CIMGUI_API bool             ImGui_IsMouseClickedEx(ImGuiMouseButton button, bool repeat );          
CIMGUI_API bool             ImGui_IsMouseReleased(ImGuiMouseButton button);                                      
CIMGUI_API bool             ImGui_IsMouseDoubleClicked(ImGuiMouseButton button);                                 
CIMGUI_API int              ImGui_GetMouseClickedCount(ImGuiMouseButton button);                                 
CIMGUI_API bool             ImGui_IsMouseHoveringRect(ImVec2 r_min, ImVec2 r_max);                               
CIMGUI_API bool             ImGui_IsMouseHoveringRectEx(ImVec2 r_min, ImVec2 r_max, bool clip );     
CIMGUI_API bool             ImGui_IsMousePosValid(const ImVec2* mouse_pos );                         
CIMGUI_API bool             ImGui_IsAnyMouseDown(void);                                                          
CIMGUI_API ImVec2           ImGui_GetMousePos(void);                                                             
CIMGUI_API ImVec2           ImGui_GetMousePosOnOpeningCurrentPopup(void);                                        
CIMGUI_API bool             ImGui_IsMouseDragging(ImGuiMouseButton button, float lock_threshold );  
CIMGUI_API ImVec2           ImGui_GetMouseDragDelta(ImGuiMouseButton button , float lock_threshold ); 
CIMGUI_API void             ImGui_ResetMouseDragDelta(void);                                                     
CIMGUI_API void             ImGui_ResetMouseDragDeltaEx(ImGuiMouseButton button );                      
CIMGUI_API ImGuiMouseCursor ImGui_GetMouseCursor(void);                                                          
CIMGUI_API void             ImGui_SetMouseCursor(ImGuiMouseCursor cursor_type);                                  
CIMGUI_API void             ImGui_SetNextFrameWantCaptureMouse(bool want_capture_mouse);                         
CIMGUI_API const char* ImGui_GetClipboardText(void);
CIMGUI_API void        ImGui_SetClipboardText(const char* text);
CIMGUI_API void        ImGui_LoadIniSettingsFromDisk(const char* ini_filename);                           
CIMGUI_API void        ImGui_LoadIniSettingsFromMemory(const char* ini_data, size_t ini_size );  
CIMGUI_API void        ImGui_SaveIniSettingsToDisk(const char* ini_filename);                             
CIMGUI_API const char* ImGui_SaveIniSettingsToMemory(size_t* out_ini_size );                  
CIMGUI_API void ImGui_DebugTextEncoding(const char* text);
CIMGUI_API bool ImGui_DebugCheckVersionAndDataLayout(const char* version_str, size_t sz_io, size_t sz_style, size_t sz_vec2, size_t sz_vec4, size_t sz_drawvert, size_t sz_drawidx);  
CIMGUI_API void  ImGui_SetAllocatorFunctions(ImGuiMemAllocFunc alloc_func, ImGuiMemFreeFunc free_func, void* user_data );
typedef struct ImVector_ImGuiStorage_ImGuiStoragePair_t
{
    int                            Size;
    int                            Capacity;
    ImGuiStorage_ImGuiStoragePair* Data;
} ImVector_ImGuiStorage_ImGuiStoragePair;
typedef struct ImVector_ImDrawCmd_t
{
    int        Size;
    int        Capacity;
    ImDrawCmd* Data;
} ImVector_ImDrawCmd;
typedef struct ImVector_ImDrawIdx_t
{
    int        Size;
    int        Capacity;
    ImDrawIdx* Data;
} ImVector_ImDrawIdx;
typedef struct ImVector_ImDrawVert_t
{
    int         Size;
    int         Capacity;
    ImDrawVert* Data;
} ImVector_ImDrawVert;
typedef struct ImVector_ImVec4_t
{
    int     Size;
    int     Capacity;
    ImVec4* Data;
} ImVector_ImVec4;
typedef struct ImVector_ImTextureID_t
{
    int          Size;
    int          Capacity;
    ImTextureID* Data;
} ImVector_ImTextureID;
typedef struct ImVector_ImVec2_t
{
    int     Size;
    int     Capacity;
    ImVec2* Data;
} ImVector_ImVec2;
typedef struct ImGuiStorage_t
{
    ImVector_ImGuiStorage_ImGuiStoragePair Data;
} ImGuiStorage;
typedef struct ImDrawVert_t
{
    ImVec2 pos;
    ImVec2 uv;
    ImU32  col;
} ImDrawVert;
typedef struct ImDrawCmdHeader_t
{
    ImVec4       ClipRect;
    ImTextureID  TextureId;
    unsigned int VtxOffset;
} ImDrawCmdHeader;
typedef struct ImDrawListSplitter_t
{
    int                    _Current;   
    int                    _Count;     
    ImVector_ImDrawChannel _Channels;  
} ImDrawListSplitter;
typedef struct ImDrawList_t
{
    ImVector_ImDrawCmd    CmdBuffer;        
    ImVector_ImDrawIdx    IdxBuffer;        
    ImVector_ImDrawVert   VtxBuffer;        
    ImDrawListFlags       Flags;            
    unsigned int          _VtxCurrentIdx;   
    ImDrawListSharedData* _Data;            
    const char*           _OwnerName;       
    ImDrawVert*           _VtxWritePtr;     
    ImDrawIdx*            _IdxWritePtr;     
    ImVector_ImVec4       _ClipRectStack;   
    ImVector_ImTextureID  _TextureIdStack;  
    ImVector_ImVec2       _Path;            
    ImDrawCmdHeader       _CmdHeader;       
    ImDrawListSplitter    _Splitter;        
    float                 _FringeScale;     
} ImDrawList;
typedef struct ImGuiViewport_t
{
    ImGuiViewportFlags Flags;              
    ImVec2             Pos;                
    ImVec2             Size;               
    ImVec2             WorkPos;            
    ImVec2             WorkSize;           
    void*              PlatformHandleRaw;  
} ImGuiViewport;