src/ImguiSdlSharp/Native.cs


        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsItemClickedEx(ImGuiMouseButton mouse_button = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsItemVisible();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsItemEdited();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsItemActivated();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsItemDeactivated();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsItemDeactivatedAfterEdit();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsItemToggledOpen();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsAnyItemHovered();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsAnyItemActive();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsAnyItemFocused();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern ImGuiID ImGui_GetItemID();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern ImVec2 ImGui_GetItemRectMin();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern ImVec2 ImGui_GetItemRectMax();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern ImVec2 ImGui_GetItemRectSize();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_SetItemAllowOverlap();

        #endregion

        #region Viewports

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern ImGuiViewport* ImGui_GetMainViewport();

        #endregion

        #region Background/Foreground Draw Lists

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern ImDrawList* ImGui_GetBackgroundDrawList();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern ImDrawList* ImGui_GetForegroundDrawList();

        #endregion

        #region Miscellaneous Utilities

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsRectVisibleBySize(ImVec2 size);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsRectVisible(ImVec2 rect_min, ImVec2 rect_max);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern double ImGui_GetTime();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ImGui_GetFrameCount();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern ImDrawListSharedData* ImGui_GetDrawListSharedData();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte* ImGui_GetStyleColorName(ImGuiCol idx);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_SetStateStorage(ImGuiStorage* storage);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern ImGuiStorage* ImGui_GetStateStorage();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_BeginChildFrame(ImGuiID id, ImVec2 size, ImGuiWindowFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_EndChildFrame();

        #endregion

        #region Text Utilities

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern ImVec2 ImGui_CalcTextSize(byte* text);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern ImVec2 ImGui_CalcTextSizeEx(byte* text, byte* text_end = default, bool hide_text_after_double_hash = false, float wrap_width = -1.0f);

        #endregion

        #region Color Utilities

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern ImVec4 ImGui_ColorConvertU32ToFloat4(uint @in);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint ImGui_ColorConvertFloat4ToU32(ImVec4 @in);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_ColorConvertRGBtoHSV(float r, float g, float b, float* out_h, float* out_s, float* out_v);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_ColorConvertHSVtoRGB(float h, float s, float v, float* out_r, float* out_g, float* out_b);

        #endregion

        #region Inputs Utilities: Keyboard/Mouse/Gamepad

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsKeyDown(ImGuiKey key);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsKeyPressed(ImGuiKey key);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsKeyPressedEx(ImGuiKey key, bool repeat = true);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsKeyReleased(ImGuiKey key);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ImGui_GetKeyPressedAmount(ImGuiKey key, float repeat_delay, float rate);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte* ImGui_GetKeyName(ImGuiKey key);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_SetNextFrameWantCaptureKeyboard(bool want_capture_keyboard);

        #endregion

        #region Inputs Utilities: Mouse specific

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsMouseDown(ImGuiMouseButton button);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsMouseClicked(ImGuiMouseButton button);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsMouseClickedEx(ImGuiMouseButton button, bool repeat = false);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsMouseReleased(ImGuiMouseButton button);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsMouseDoubleClicked(ImGuiMouseButton button);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ImGui_GetMouseClickedCount(ImGuiMouseButton button);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsMouseHoveringRect(ImVec2 r_min, ImVec2 r_max);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsMouseHoveringRectEx(ImVec2 r_min, ImVec2 r_max, bool clip = true);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsMousePosValid(ImVec2* mouse_pos = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsAnyMouseDown();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern ImVec2 ImGui_GetMousePos();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern ImVec2 ImGui_GetMousePosOnOpeningCurrentPopup();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_IsMouseDragging(ImGuiMouseButton button, float lock_threshold = -1.0f);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern ImVec2 ImGui_GetMouseDragDelta(ImGuiMouseButton button = default, float lock_threshold = -1.0f);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_ResetMouseDragDelta();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_ResetMouseDragDeltaEx(ImGuiMouseButton button = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern ImGuiMouseCursor ImGui_GetMouseCursor();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_SetMouseCursor(ImGuiMouseCursor cursor_type);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_SetNextFrameWantCaptureMouse(bool want_capture_mouse);

        #endregion

        #region Clipboard Utilities

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte* ImGui_GetClipboardText();

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_SetClipboardText(byte* text);
        #endregion

        #region Settings/.Ini Utilities

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_LoadIniSettingsFromDisk(byte* ini_filename);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_LoadIniSettingsFromMemory(byte* ini_data, nuint ini_size = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_SaveIniSettingsToDisk(byte* ini_filename);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte* ImGui_SaveIniSettingsToMemory(nuint* out_ini_size = default);

        #endregion

        #region Debug Utilities

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_DebugTextEncoding(byte* text);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_DebugCheckVersionAndDataLayout(byte* version_str, nuint sz_io, nuint sz_style, nuint sz_vec2, nuint sz_vec4, nuint sz_drawvert, nuint sz_drawidx);

        #endregion

        #region Memory Allocators

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_SetAllocatorFunctions(ImGuiMemAllocFunc alloc_func, ImGuiMemFreeFunc free_func, void* user_data = default);
